# cython-orderbook

./: .gitignore  README.md  orderbook.pyx  pyproject.toml  requirements.txt  setup.py  stress_test.py  test_orderbook.py
.github/workflows/: publish.yaml
cython_orderbook/: __init__.py  orderbook.c  orderbook.pyx
tests/: stress_test.py  test_orderbook.py
