[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "cython-orderbook"
version = "0.1.2"
description = "A high-performance order book implementation using Cython"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sortedcontainers>=2.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/Akhil4n/cython-orderbook"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"  # build for Python 3.10, 3.11, 3.12

[tool.cibuildwheel.linux]
before-build = "pip install cython"

[tool.cibuildwheel.macos]
before-build = "pip install cython"

[tool.cibuildwheel.windows]
before-build = "pip install cython"